--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-/* * { 
+* { 
     outline: dotted;
-} */
+}
 
 body {
     width: 960px;
@@ -10,7 +10,8 @@ body {
 #nathan {
     float: left;
     vertical-align:middle;
-    margin: 0px 50px
+    margin: 0px 50px;
+    width: 350px;
 }
 
 header {
@@ -32,10 +33,6 @@ main h2 {
     padding-top: 40px;
 }
 
-main img {
-    width: 350px;
-}
-
 main p {
     padding-bottom: 15px;
     font-size: 20px;
@@ -43,6 +40,34 @@ main p {
 
 li {
     font-size: 20px;
+}
+
+aside {
+    /* display: inline; */
+    border: 5px black solid;
+    width: 50%;
+    box-sizing: border-box;
+    text-align: center;
+}
+
+aside h3 {
+    border-bottom: 5px solid black;
+}
+
+ol {
+    list-style-type: decimal;
+    padding-bottom: 60px;   
+    padding-left: 40px; 
+    text-align: left;
+    box-sizing: border-box;
+    width: 60%;
+    display: inline-block;
+}
+
+aside img {
+    width: 25%;
+    display: inline;
+    margin-top: 15px;
     
 }
 
