--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
-* { 
+/* * { 
     outline: dotted;
-}
+} */
 
 body {
     width: 960px;
@@ -43,9 +43,8 @@ li {
 }
 
 aside {
-    /* display: inline; */
     border: 5px black solid;
-    width: 50%;
+    width: 45%;
     box-sizing: border-box;
     text-align: center;
 }
@@ -57,7 +56,8 @@ aside h3 {
 ol {
     list-style-type: decimal;
     padding-bottom: 60px;   
-    padding-left: 40px; 
+    padding-left: 40px;
+   
     text-align: left;
     box-sizing: border-box;
     width: 60%;
@@ -65,7 +65,7 @@ ol {
 }
 
 aside img {
-    width: 25%;
+    width: 150px;
     display: inline;
     margin-top: 15px;
     
