--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-/* * { 
-    outline: dotted;
-} */
-
 body {
     width: 960px;
     margin: 0 auto;
@@ -44,9 +40,14 @@ li {
 
 aside {
     border: 5px black solid;
-    width: 45%;
+    width: 50%;
     box-sizing: border-box;
     text-align: center;
+    float: left;
+}
+
+aside #movie {
+    float: right;
 }
 
 aside h3 {
@@ -66,6 +67,7 @@ ol {
 
 aside img {
     width: 150px;
+    height: 225px;
     display: inline;
     margin-top: 15px;
 }
@@ -81,7 +83,6 @@ a:visited {
 footer {
     background-color: black;
     height: 50px;
-    /* color: gold; */
     position: fixed;
     bottom: 0;
     width: 960px;
@@ -92,16 +93,10 @@ footer {
     float: left;
     padding-top: 25px;
     padding-left: 10px;
-    /* position: fixed; */
-    /* bottom: 0; */
-    /* text-align: left; */
 }
 
 #email {
     float: right;
     padding-top: 25px;
     padding-right: 10px;
-    /* position: fixed; */
-    /* bottom: 0;  */
-    /* text-align: right; */
 }
